--- a/01-ping.yaml
+++ b/01-ping.yaml
@@ -1,3 +1,5 @@
+# ansible-playbook -i inventory.ini -e ansible_user=<username> -e ansible-password=<password> 01-ping.yaml
+
 - name: ping the server
   hosts: web
   tasks:
