--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -6,11 +6,11 @@
   tasks:
   - name: install nginx
     ansible.builtin.package:  # heterogenous module that can work for all distributions
-    - name: nginx
+      name: nginx
       state: present
   
   - name: start nginx
     ansible.builtin.service:
-    - name: nginx
+      name: nginx
       state: started
       enabled: yes
