--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -1,3 +1,5 @@
+# enter the value for the prompt without any quotes even if it is a phrase
+
 - name: variables from prompt
   hosts: web
   vars_prompt:
