--- a/inventory.ini
+++ b/inventory.ini
@@ -1,15 +1,37 @@
 # update the IPs of the servers before using this file
+172.31.41.80
+172.31.41.81
+172.31.41.82
+
 
 [web]
-172.31.41.166
+172.31.34.105
 
 [web:vars]
 tech="ansible"
 duration="20 hrs"
 student="Robert"
 
-#[backend]
-#list of servers IPs
+[backend]
+172.31.41.56
+172.31.41.57
 
-#[frontend]
-# lsit of servers IPs
+[mysql]
+172.31.41.58
+172.31.41.59
+
+
+[servers:children]
+web
+backend
+
+[web:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
+
+#[all:vars]
+#ansible_user=ec2-user
+#ansible_password=DevOps321
+
+[local]
+localhost
