--- a/10-data-types.yaml
+++ b/10-data-types.yaml
@@ -1,4 +1,4 @@
-# ansible-playbook -i inventory.ini 10.data-types.yaml
+# ansible-playbook -i inventory.ini 10-data-types.yaml
 
 - name: data types
   hosts: local    # run playbook on the ansible server
