--- a/inventory.ini
+++ b/inventory.ini
@@ -25,13 +25,13 @@ student="Robert"
 web
 backend
 
-[web:vars]
-ansible_user=ec2-user
-ansible_password=DevOps321
-
-#[all:vars]
+#[web:vars]
 #ansible_user=ec2-user
 #ansible_password=DevOps321
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
 
 [local]
 localhost
