--- a/20-create-ec2-r53-records.yaml
+++ b/20-create-ec2-r53-records.yaml
@@ -56,6 +56,6 @@
       wait: true
       overwrite: true
     loop: "{{ec2_instances.results}}"
-    when: ec2_instances.results.item == "frontend"
+    when: item.item == "frontend"
     
     
