--- a/20-create-ec2-r53-records.yaml
+++ b/20-create-ec2-r53-records.yaml
@@ -12,8 +12,8 @@
     - frontend
     zone: "sprojex.in"
   tasks:
-  - name: install boto3 and botocore for python
-    ansible.builtin.package:
+  - name: ansible to install boto3 and botocore for python
+    ansible.builtin.pip:
       name: "{{item}}"
       state: present
     loop:
